Sprint 3, horizontal scroll was fixed

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,6 @@
 .cover {
     margin: 0 auto 64px auto;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
