--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,6 @@
 .footer {
     padding: 0 16px 24px 16px;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
