--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
     margin: 0 0 48px 0;
     padding: 16px 16px 0 16px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     align-items: center;
