--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,6 +7,7 @@
     .intro {
         margin: 0 0 88px 0;
         padding: 0 24px 0 24px;
+        box-sizing: border-box;
     }
 }
 
