--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,7 @@
 .photo-grid {
     margin: 0 0 64px 0;
     padding: 0 16px;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
