--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,7 @@
 .places {
     width: 100%;
     padding: 0;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
